    ADDED: Two single click rename (Total Commander rename)
    ADDED: The 3rd hand of krusader. click the litle arrow below the panel's
           scrollbar to see..
    ADDED: showing suid, sgid and sticky bits in the permissions column
    ADDED: New useraction-system (partly based on Shies usermenu-prototype)
    
    REACTIVATED: usermenu (now using the new useraction-system)

    FIXED: compare content error at remote urls (problem with sleep 2)
    FIXED: totals bar didn't update when an incremental refresh happened
    FIXED: locate doesn't report the errors occured during the search
    FIXED: the viewer size is forgotten in maximized mode (KDE hack)
    FIXED: internationalization bugs, illegal usage of QString::latin1()
    FIXED: krarc, ignores the packer dependencies
    FIXED: krarc, rar: mkdir does not work, illegal time and permission info
    FIXED: krarc, problem with copying / moving inside the archive
    FIXED: krarc, problem with international characters in put/mkdir
    FIXED: krarc, problems at copying subdirectories from the archive
    FIXED: [ 1005533 ] stepping onto a subfs device crashes krusader
    FIXED: [ 988835 ] window size of synchronize dirs is not stored
    FIXED: [ 946567 ] krusader minimizes to tray on desktop change
    FIXED: mountman changes... read the email ;-)    


1.40
======================
    ADDED: when searching in files (grep), push the string we're searching for
           into the clipboard when pressing F3 or F4. this saves an extra copy
           when searching inside the file
    ADDED: Catalan translation
 
 DISABLED: usermenu for 1.40
    
    FIXED: [ 962340 ] Alt-T broken to call Tools menu
    FIXED: [ 980252 ] Compare by Content: right/left position swapped
    FIXED: [ 990141 ] F3/F4 in root mode trouble with permissions    
    FIXED: [ 959916 ] Krusader window too large on startup
    FIXED: username and group information are wrong for ftp_vfs