@@ -86,6 +86,8 @@ public:
    virtual void restoreSettings() { KListView::restoreLayout( _config, nameInKConfig() ); }
    virtual QString nameInKConfig() { return _nameInKConfig; }
    virtual QString itemToFilename( QListViewItem *it ) { return dynamic_cast<KrViewItem*>( it ) ->name(); } //remove
+   
+   inline bool isCaseSensitiveSort() {return caseSensitiveSort;}
 
 signals:
    void executed( QString &name );
@@ -140,6 +142,7 @@ private:
    ColumnType _columns[ MAX_COLUMNS ];
    static QString ColumnName[ MAX_COLUMNS ];
    bool _withIcons, _focused;
+   bool caseSensitiveSort;
    KrViewItem *_currDragItem;
    QString _nameInKConfig;
    bool &_left;
