@@ -33,6 +33,7 @@
     
     REACTIVATED: usermenu (now using the new useraction-system)
 
+    FIXED: performance increasing: faster sort
     FIXED: compare content error at remote urls (problem with sleep 2)
     FIXED: totals bar didn't update when an incremental refresh happened
     FIXED: locate doesn't report the errors occured during the search
